# web-service

./: .gitignore  NAMING_CONVENTIONS.md  README.md
monorepo/: Cargo.toml
monorepo/crates/app/auth-service/: Cargo.toml
monorepo/crates/app/auth-service/config/: default.yaml
monorepo/crates/app/auth-service/src/: main.rs
monorepo/crates/app/user-service/: Cargo.toml
monorepo/crates/app/user-service/config/: default.yaml
monorepo/crates/app/user-service/src/: main.rs
monorepo/crates/app/user-service/src/handlers/: auth_handler.rs
monorepo/crates/app/user-service/src/models/: claims.rs  user.rs
monorepo/crates/app/user-service/src/repositories/: pg_user_repo.rs  user_repo.rs
monorepo/crates/app/user-service/src/services/: user_service.rs
monorepo/crates/shared/: Cargo.toml
monorepo/crates/shared/src/: lib.rs
monorepo/crates/shared/src/config/: config.rs
monorepo/crates/shared/src/constants/: constants.rs
monorepo/crates/shared/src/logger/: logger.rs
monorepo/crates/shared/src/reply/: reply.rs
monorepo/migrations/: 20250908103039_create_users_table.sql
