[workspace]
members = [
    "crates/api",
    "crates/app/user-service",
    "crates/shared",
]

resolver = "3"

[workspace.dependencies]
# web 框架
axum = "0.8.5"
# 参数校验
axum-valid = "0.24.0"
# 序列化
serde = "1.0.228"
# 序列化 json
serde_json = "1.0.145"
# 序列化 yml
serde_yml = "0.0.12"
# 异步库
tokio = { version = "1.47.1", features = ["full"] }
# 日志
tracing = "0.1.41"
# 日志 subscriber
tracing-subscriber = "0.3.20"
# 配置
config = "0.15.17"
# 项目路径
project-root = "0.2.2"
# ORM
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "migrate", "time" ] }
# “转换” async trait 方法
async-trait = "0.1.89"
# 参数校验
validator = { version = "0.20", features = ["derive"] }
# 密码加密
bcrypt = "0.17.1"
# 雪花算法
idgenerator = "2.0.0"
# once cell
once_cell = "1.21.3"
# 时间库
time = "0.3.44"
# jwt
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }