[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../shared" }
axum = { workspace = true }
axum-valid = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
sqlx = { workspace = true }