[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../../shared" }
axum = { workspace = true }
axum-valid = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
bcrypt = { workspace = true }
idgenerator = { workspace = true }
time = { workspace = true }
jsonwebtoken = { workspace = true }